compiler/weave_syntax/tests/data/syntax/expressions/match-0001.error
error: Unexpected tokens
        --> <source>:26:5
         |
      26 |     function Foo() -> Int32
         |     ^^^^^^^^^^^^^^^^^^^^^^^
      27 |     {
         | ^^^^^
      28 |         return 2;
         | ^^^^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:30:5
         |
      30 |     case 2: return 2;
         |     ^^^^^^^^^^^^^^^^^
      31 |     case 3: return 3;
         | ^^^^^^^^^^^^^^^^^^^^^
      32 |     default: return 4;
         | ^^^^^^^^^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:34:1
         |
      34 | }
         | ^
      35 | 
         | 
      36 | public function ThisShouldParse() => 42;
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
