compiler/weave_syntax/tests/data/syntax/expressions/match-0001.source
public function MatchExpressionExample(x: Int32, y: Int32) -> String
{
    match (x)
    {
    case 0: return "One";
    case 1: return "Two";
    case 2:
        match (y)
        {
            case 0: return "Two and Zero";
            case 1: return "Two and One";
            case 2: return "Two and Two";
            default: return "Two and something else";
        };
    case 3: return "Three";
    default: return "Something else";
    };
}

public function WithErrors(x: Int32) -> Int32
{
    match (x)
    {
    case 0: return 0;
    case 1: return 1;
    function Foo() -> Int32
    {
        return 2;
    }
    case 2: return 2;
    case 3: return 3;
    default: return 4;
    };
}

public function ThisShouldParse() => 42;
